# cmd/api/main.go
@@ -1,19 +1,12 @@
 package main
 
 import (
-	"encoding/binary"
-	"net/http"
-
-	"github.com/kjj1998/url-shortener-go/internal/model"
-	util "github.com/kjj1998/url-shortener-go/internal/util/http"
-
 	"github.com/gin-gonic/gin"
-	"github.com/jxskiss/base62"
-	"github.com/sony/sonyflake"
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 
 	docs "github.com/kjj1998/url-shortener-go/docs"
+	"github.com/kjj1998/url-shortener-go/internal/routes"
 )
 
 //	@title			URL shortening API
@@ -31,29 +24,14 @@ import (
 //	@host		localhost:8080
 //	@BasePath	/api/v1
 
-var sf *sonyflake.Sonyflake
-
-func init() {
-	var st sonyflake.Settings
-	sf = sonyflake.NewSonyflake(st)
-	if sf == nil {
-		panic("sonyflake not created")
-	}
-}
-
 func main() {
-	// id, _ := sf.NextID()
-	// byteSlice := make([]byte, 8)
-	// binary.BigEndian.PutUint64(byteSlice, id)
-	// encoded := base62.EncodeToString(byteSlice)
-	// fmt.Println(encoded)
 	router := gin.Default()
 	docs.SwaggerInfo.BasePath = "/api/v1"
 	v1 := router.Group("/api/v1")
 	{
 		shortenUrl := v1.Group("/data")
 		{
-			shortenUrl.POST("/shorten", GenerateShortenedUrl)
+			shortenUrl.POST("/shorten", routes.GenerateShortenedUrl)
 		}
 	}
 
@@ -62,54 +40,4 @@ func main() {
 		ginSwagger.DefaultModelsExpandDepth(-1)))
 
 	router.Run(":8080")
-}
-
-// GenerateShortenedUrl godoc
-// @Summary generate shortened urls
-// @Schemes
-// @Description generate shortened urls
-// @Tags example
-// @Accept json
-// @Produce json
-// @Param longUrl body LongUrl true	"Add URL for shortening"
-// @Success 201 {object} ShortenedUrl
-// @Failure 400 {object} HTTPError
-// @Router /data/shorten [post]
-func GenerateShortenedUrl(g *gin.Context) {
-	var longUrlForShortening model.LongUrl
-	if err := g.ShouldBindJSON(&longUrlForShortening); err != nil {
-		util.NewError(g, http.StatusBadRequest, err)
-		return
-	}
-
-	if err := longUrlForShortening.Validation(); err != nil {
-		util.NewError(g, http.StatusBadRequest, err)
-		return
-	}
-
-	longUrl := longUrlForShortening.LongUrl
-	id := generateUniqueId()
-	shortUrl := shortenUrl(id)
-
-	shortenedUrl := model.ShortenedUrl{
-		ID:       id,
-		ShortUrl: shortUrl,
-		LongUrl:  longUrl,
-	}
-
-	g.IndentedJSON(http.StatusCreated, shortenedUrl)
-}
-
-func generateUniqueId() uint64 {
-	id, _ := sf.NextID()
-
-	return id
-}
-
-func shortenUrl(id uint64) string {
-	byteSlice := make([]byte, 8)
-	binary.BigEndian.PutUint64(byteSlice, id)
-	encoded := base62.EncodeToString(byteSlice)
-
-	return encoded
 }
