# docs/swagger.json
@@ -38,7 +38,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.LongUrl"
+                            "$ref": "#/definitions/models.LongUrl"
                         }
                     }
                 ],
@@ -46,13 +46,13 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/main.ShortenedUrl"
+                            "$ref": "#/definitions/models.ShortenedUrl"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/main.HTTPError"
+                            "$ref": "#/definitions/utils.HTTPError"
                         }
                     }
                 }
@@ -60,20 +60,7 @@
         }
     },
     "definitions": {
-        "main.HTTPError": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "integer",
-                    "example": 400
-                },
-                "message": {
-                    "type": "string",
-                    "example": "status bad request"
-                }
-            }
-        },
-        "main.LongUrl": {
+        "models.LongUrl": {
             "type": "object",
             "properties": {
                 "longUrl": {
@@ -81,7 +68,7 @@
                 }
             }
         },
-        "main.ShortenedUrl": {
+        "models.ShortenedUrl": {
             "type": "object",
             "properties": {
                 "id": {
@@ -92,6 +79,19 @@
                 },
                 "shortUrl": {
                     "type": "string"
+                }
+            }
+        },
+        "utils.HTTPError": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 400
+                },
+                "message": {
+                    "type": "string",
+                    "example": "status bad request"
                 }
             }
         }
